0026415: <TFunction_GraphNode> XML should not break line in the middle of text.

Line break between "previous" and "next" ids is replaced by additional spaces (these facilitate visual separation of the two sub-lists).