src/XmlMFunction/XmlMFunction_GraphNodeDriver.cxx
@@ -184,7 +184,10 @@ void XmlMFunction_GraphNodeDriver::Paste (const Handle(TDF_Attribute)& theSource
     aValueStr += TCollection_AsciiString(ID);
     aValueStr += ' ';
   }
-  aValueStr += "\n";
+
+  // add more spaces between "previous" and "next" ids to make them easily
+  // recognizable for human
+  aValueStr += "   ";
 
   // Next
   // ====
